tests/fixtures/positive/code-style/NoSingleLetterVariableNames.cls
public class Example {
    public void method() {
        Integer index = 5;
        String name = 'test';
        
        for (Integer i = 0; i < 10; i++) {
            // Loop counter allowed
        }
        
        try {
            // ...
        } catch (Exception e) {
            // Exception variable allowed
        }
    }
}

