tests/fixtures/negative/naming/NoAbbreviations_OverrideFooBar.cls
public class ExampleFooBarAbbr {
	public void method() {
		Integer foo = 0;
		Integer bar = 1;
		Integer baz = 2;
	}
}
